# final_austinmarckx

./: README.md
easyMoney/: helpme.ipynb  svsOutMemory_OS.ipynb  svsOutMemory_OS_Py.ipynb  testing copy.py  testing.py
napari-hello/napari_hello/napari_hello/: __init__.py
napari-hello/svsInMemory/: setup.cfg
napari-hello/svsInMemory/svsInMemory/: __init__.py  _reader.py  _svsInMemory.py  svsInMemory.yaml
napari-hello/svsInMemory/svsInMemory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari-hello/svsOutMemory/: setup.cfg
napari-hello/svsOutMemory/svsOutMemory/: __init__.py  _reader.py  _svsOutMemory.py  svsOutMemory.yaml
napari-hello/svsOutMemory/svsOutMemory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari-hello/svsOutMemory/svsOutMemoryHED/svsOutMemoryHED/: _reader.py  _svsOutMemoryHED.py  svsOutMemoryHED.yaml
napari-hello/svsOutMemory/svsOutMemoryHED/svsOutMemoryHED.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
napari-hello/svsOutMemoryHED/: setup.cfg
napari-hello/svsOutMemoryHED/svsOutMemoryHED/: __init__.py
napari-hello/svsOutMemoryHED/svsOutMemoryHED.egg-info/: top_level.txt
napari-hello/svsOutMemoryOS/: setup.cfg
napari-hello/svsOutMemoryOS/svsOutMemoryOS/: __init__.py  _reader.py  _svsOutMemoryOS.py  svsOutMemoryOS.yaml
napari-hello/svsOutMemoryOS/svsOutMemoryOS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
testing/: svsInMemory_OS.ipynb  svsOutMemory_OS_Py_Thresh.ipynb  testing.py
