[metadata]
name = svsInMemory
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
package_dir = 
    = .
install_requires =
    napari

[options.packages.find]
where = .

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    svsInMemory = svsInMemory:svsInMemory.yaml

napari.plugin = 
    svsInMemory = svsInMemory

